--- a/CrazyBurger/templates/clientes/clientes.html
+++ b/CrazyBurger/templates/clientes/clientes.html
@@ -3,7 +3,7 @@
 <main>
     
     <div class="recent-order">
-        <h2>&Aacute;reas de Trabajo</h2><br>
+        <h2>Clientes</h2><br>
         <a href="{{url_for('clientes.insertar_cliente')}}" class="btn primary">
             <span class="material-symbols-sharp">data_saver_on</span>
             <h3>Nuevo</h3>
