--- a/CrazyBurger/templates/receta/Receta.html
+++ b/CrazyBurger/templates/receta/Receta.html
@@ -8,7 +8,7 @@
             <span class="material-symbols-sharp">data_saver_on</span>
             <h3>Nuevo</h3>
         </a>
-        <table>
+        <table id="tblReceta">
             <thead>
                 <tr>
                 <th>Receta</th>
@@ -42,4 +42,5 @@
         </table>
     </div>
 </main>
+<script src="../../static/js/receta/datatables.js"></script>
 {% endblock %}
