--- a/CrazyBurger/templates/security/login.html
+++ b/CrazyBurger/templates/security/login.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+﻿{% extends "layout.html" %}
 {% block title %}LOGIN{% endblock %}
 {% block description %}INICIA SESIÓN CON NOSOTROS{% endblock %}
 {% block content %}
