--- a/CrazyBurger/templates/clientes/actualizarCliente.html
+++ b/CrazyBurger/templates/clientes/actualizarCliente.html
@@ -14,7 +14,7 @@
             <input  type="text" name="id_cliente" class="input_puesto" value="{{row[0]}}">
             <span>id</span>
         </label> 
-
+        <div class="flex">
         <label>
             <input required placeholder type="text" name="nombresEdit" class="input_puesto" value="{{ row[1] }}">
             <span>Nombres</span>
@@ -24,12 +24,8 @@
             <input required="" placeholder="" type="text" name="apellidosEdit" class="input_puesto" value="{{ row[2] }}">
             <span>Apellidos</span>
         </label>
-
-        <label>
-            <input required="" placeholder="" type="text" name="celularEdit" class="input_puesto" value="{{ row[3] }}">
-            <span>Celular</span>
-        </label>
-
+        </div>
+        <div class="flex">
         <label>
             <input required="" placeholder="" type="text" name="calleEdit" class="input_puesto" value="{{ row[5] }}">
             <span>Calle</span>
@@ -39,13 +35,26 @@
             <input required="" placeholder="" type="text" name="coloniaEdit" class="input_puesto" value="{{ row[6] }}">
             <span>Colonia</span>
         </label>
-
+        </div>
+        <div class="flex">
         <label>
             <input required="" placeholder="" type="text" name="codigo_postalEdit" class="input_puesto" value="{{ row[4] }}">
             <span>Codigo Postal</span>
         </label>
-        
+        <label>
+            <input required="" placeholder="" type="text" name="celularEdit" class="input_puesto" value="{{ row[3] }}">
+            <span>Celular</span>
+        </label>
+        </div>
+        <label>
+            <input required=""  type="email" name="correo" class="input_puesto" value="{{ row[12] }}">
+            <span>Email</span>
+        </label>
         {% endfor %}  
+        <label>
+            <input required="" type="password" name="password" class="input_puesto">
+            <span>Contraseña</span>
+        </label>
         <input type="hidden" name="csrf_token" value="{{csrf_token()}}"/>
         <button class="submit">Actualizar</button>
     
