--- a/CrazyBurger/templates/empleados/insertarEmpleado.html
+++ b/CrazyBurger/templates/empleados/insertarEmpleado.html
@@ -7,7 +7,7 @@
             <span class="material-symbols-sharp">assignment_return</span>
         </a>
         <h6 class="puesto_message">Registra un nuevo empleado. </h6>
-
+        <div class="flex">
         <label>
             <input required="" placeholder="" type="text" name="nombres" class="input_puesto">
             <span>Nombre</span>
@@ -22,23 +22,24 @@
             <input required="" placeholder="" type="text" name="ape_materno" class="input_puesto">
             <span>Apellido Materno</span>
         </label>
-
+        </div>
         <!-- Foto de perfil -->
         <label>
             <input required="" placeholder="" type="file" name="foto_perfil" class="input_puesto" value="NA">
             <span>Foto de Perfil</span>
         </label>
-
+        <div class="flex">
         <label>
             <input required="" placeholder="" type="text" name="rfc" class="input_puesto">
             <span>RFC</span>
         </label>
-
+    
         <label>
             <input required="" placeholder="" type="text" name="curp" class="input_puesto">
             <span>CURP</span>
         </label>
-
+        </div>
+        <div class="flex">
         <label>
             <input required="" placeholder="" type="text" name="num_seguro_social" class="input_puesto">
             <span>Número de Seguro Social</span>
@@ -48,7 +49,7 @@
             <input required="" placeholder="" type="text" name="celular" class="input_puesto">
             <span>Teléfono</span>   
         </label>
-
+        </div>
         <label>
             <input required="" placeholder="" type="text" name="alergias" class="input_puesto">
             <span>Alergias</span>
@@ -58,7 +59,7 @@
             <input required="" placeholder="" type="text" name="observaciones" class="input_puesto">
             <span>Observaciones</span>
         </label>
-
+        <div class="flex">
         <label>
             <input required="" placeholder="" type="text" name="codigo_postal" class="input_puesto">
             <span>Codigo Postal</span>
@@ -73,7 +74,8 @@
             <input required="" placeholder="" type="text" name="colonia" class="input_puesto">
             <span>Colonia</span>
         </label>
-
+        </div>
+        <div class="flex">
         <!-- Puestos -->
         <label>
             <select name="puesto_id" class="input_puesto">
@@ -95,9 +97,15 @@
             </select>
             <span>Departamento</span>
         </label>
-
-        <input type="hidden" name="usuario_id" value="{{session['_user_id']}}"/>
-
+        </div>
+        <label>
+            <input required=""  type="email" name="correo" class="input_puesto">
+            <span>Email</span>
+        </label>
+        <label>
+            <input required="" type="password" name="password" class="input_puesto">
+            <span>Contraseña</span>
+        </label>
         <input type="hidden" name="csrf_token" value="{{csrf_token()}}"/>
         <button class="submit">Agregar</button>
     
