--- a/CrazyBurger/templates/menu/Menu.html
+++ b/CrazyBurger/templates/menu/Menu.html
@@ -8,7 +8,7 @@
             <span class="material-symbols-sharp">data_saver_on</span>
             <h3>Nuevo</h3>
         </a>
-        <table>
+        <table id="tblMenu">
             <thead>
                 <tr>
                 <th>Platillo</th>
@@ -38,4 +38,5 @@
         </table>
     </div>
 </main>
+<script src="../../static/js/menu/datatables.js"></script>
 {% endblock %}
