--- a/CrazyBurger/templates/proveedor/actualizarProveedor.html
+++ b/CrazyBurger/templates/proveedor/actualizarProveedor.html
@@ -18,7 +18,7 @@
             <input required placeholder type="text" name="razon_socialEdit" class="input_puesto" value="{{row[1]}}">
             <span>Razon Social</span>
         </label>
-
+        <div class="flex">
         <label>
             <input required="" placeholder="" type="text" name="rfcEdit" class="input_puesto" value="{{row[2]}}">
             <span>RFC</span>
@@ -28,7 +28,8 @@
             <input required="" placeholder="" type="text" name="aliasEdit" class="input_puesto" value="{{row[3]}}">
             <span>Alias</span>
         </label>
-
+        </div>
+        <div class="flex">
         <label>
             <input required="" placeholder="" type="text" name="correoEdit" class="input_puesto" value="{{row[5]}}">
             <span>Correo</span>
@@ -38,7 +39,8 @@
             <input required="" placeholder="" type="text" name="celularEdit" class="input_puesto" value="{{row[6]}}">
             <span>Celular</span>
         </label>
-
+    </div>
+        <div class="flex">
         <label>
             <input required="" placeholder="" type="text" name="ciudadEdit" class="input_puesto" value="{{row[7]}}">
             <span>Ciudad</span>
@@ -53,7 +55,8 @@
             <input required="" placeholder="" type="text" name="codigo_postalEdit" class="input_puesto" value="{{row[9]}}">
             <span>Codigo Postal</span>
         </label>
-
+    </div>
+    <div class="flex">
         <label>
             <input required="" placeholder="" type="text" name="calleEdit" class="input_puesto" value="{{row[10]}}">
             <span>Calle</span>
@@ -63,7 +66,7 @@
             <input required="" placeholder="" type="text" name="coloniaEdit" class="input_puesto" value="{{row[11]}}">
             <span>Colonia</span>
         </label>
-        
+    </div>
         {% endfor %}  
         <input type="hidden" name="csrf_token" value="{{csrf_token()}}"/>
         <button class="submit">Actualizar</button>
