--- a/CrazyBurger/templates/proveedor/proveedor.html
+++ b/CrazyBurger/templates/proveedor/proveedor.html
@@ -3,7 +3,7 @@
 <main>
     
     <div class="recent-order">
-        <h2>&Aacute;rea de Trabajo</h2><br>
+        <h2>Proveedores</h2><br>
         <a href="{{url_for('proveedor.insertar_proveedor')}}" class="btn primary">
             <span class="material-symbols-sharp">data_saver_on</span>
             <h3>Nuevo</h3>
